--- a/package.json
+++ b/package.json
@@ -5,16 +5,10 @@
   "main": "./dist/scratch-paint.js",
   "browser": "./src/index.js",
   "scripts": {
-    "build": "npm run clean && webpack --progress --colors --bail",
     "clean": "rimraf ./dist && mkdirp dist && rimraf ./playground && mkdirp playground",
-    "deploy": "touch playground/.nojekyll && gh-pages -t -d playground -m \"[skip ci] Build for $(git log --pretty=format:%H -n1)\"",
-    "i18n:push": "tx-push-src scratch-editor paint-editor ./translations/en.json",
-    "i18n:src": "rimraf ./translations/messages && babel src > tmp.js && rimraf tmp.js && ./scripts/build-i18n-source.js ./translations/messages/ ./translations/",
-    "lint": "eslint . --fix --ext .js,.jsx",
-    "start": "webpack-dev-server",
-    "test": "npm run unit && NODE_ENV=production npm run build",
-    "unit": "jest --reporters=default",
-    "watch": "webpack --progress --colors --watch"
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider webpack --progress --colors --bail",
+    "electron-start": "electron .",
+    "electron-pack": "electron-packager . scratch-paint --platform=win32 --arch=x64 --out=playground --overwrite"
   },
   "author": "Massachusetts Institute of Technology",
   "license": "GPL-3.0",
@@ -24,99 +18,82 @@
     "url": "git+ssh://git@github.com/LLK/scratch-paint.git"
   },
   "dependencies": {
-    "@scratch/paper": "0.11.20200728195508",
-    "classnames": "2.2.5",
-    "keymirror": "0.1.1",
-    "lodash.bindall": "4.4.0",
-    "lodash.omit": "4.5.0",
-    "minilog": "3.1.0",
-    "parse-color": "1.0.0",
-    "prop-types": "^15.5.10"
+    "@scratch/paper": "latest",
+    "classnames": "latest",
+    "keymirror": "latest",
+    "lodash.bindall": "latest",
+    "lodash.omit": "latest",
+    "minilog": "latest",
+    "parse-color": "latest",
+    "prop-types": "latest"
   },
   "peerDependencies": {
-    "react": "^16",
-    "react-dom": "^16",
-    "react-intl": "^2",
-    "react-intl-redux": "^0.7",
-    "react-popover": "^0.5",
-    "react-redux": "^5",
-    "react-responsive": "^4",
-    "react-style-proptype": "^3",
-    "react-tooltip": "^3",
-    "redux": "^3",
-    "scratch-render-fonts": "^1.0.0-prerelease.20210401210003"
+    "react": "latest",
+    "react-dom": "latest",
+    "react-intl": "latest",
+    "react-intl-redux": "latest",
+    "react-popover": "latest",
+    "react-redux": "latest",
+    "react-responsive": "latest",
+    "react-style-proptype": "latest",
+    "react-tooltip": "latest",
+    "redux": "latest",
+    "scratch-render-fonts": "latest"
   },
   "devDependencies": {
-    "autoprefixer": "9.7.4",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "8.2.6",
-    "babel-jest": "23.6.0",
-    "babel-loader": "7.1.5",
-    "babel-plugin-react-intl": "3.0.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "css-loader": "3.4.0",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.6",
-    "eslint": "5.16.0",
-    "eslint-config-import": "0.13.0",
-    "eslint-config-scratch": "7.0.0",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-react": "7.20.3",
-    "gh-pages": "3.2.3",
-    "html-webpack-plugin": "3.2.0",
-    "jest": "22.4.4",
-    "jest-canvas-mock": "2.3.1",
-    "jest-junit": "13.0.0",
-    "json": "9.0.6",
-    "lodash.defaultsdeep": "4.6.1",
-    "mkdirp": "1.0.4",
-    "postcss-import": "12.0.1",
-    "postcss-loader": "3.0.0",
-    "postcss-simple-vars": "5.0.2",
-    "raf": "3.4.1",
-    "react": "16.2.0",
-    "react-dom": "16.4.0",
-    "react-intl": "2.9.0",
-    "react-intl-redux": "2.0.0",
-    "react-popover": "0.5.10",
-    "react-redux": "5.1.0",
-    "react-responsive": "4.1.0",
-    "react-style-proptype": "3.2.2",
-    "react-test-renderer": "^16.0.0",
-    "react-tooltip": "3.8.4",
-    "redux": "3.7.2",
-    "redux-mock-store": "1.5.4",
-    "redux-throttle": "0.1.1",
-    "regenerator-runtime": "0.13.9",
-    "rimraf": "2.7.1",
-    "scratch-l10n": "3.14.20220428031608",
-    "scratch-render-fonts": "1.0.0-prerelease.20210401210003",
-    "style-loader": "1.3.0",
-    "svg-url-loader": "3.0.3",
-    "tap": "14.11.0",
-    "uglifyjs-webpack-plugin": "2.2.0",
-    "url-loader": "2.3.0",
-    "webpack": "4.46.0",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.2"
-  },
-  "jest": {
-    "setupFiles": [
-      "raf/polyfill",
-      "<rootDir>/test/helpers/enzyme-setup.js",
-      "jest-canvas-mock"
-    ],
-    "testURL": "http://localhost",
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/test/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/test/__mocks__/styleMock.js"
-    }
-  },
-  "jest-junit": {
-    "outputDirectory": "./test/results"
+    "autoprefixer": "latest",
+    "babel-cli": "latest",
+    "babel-core": "latest",
+    "babel-eslint": "latest",
+    "babel-jest": "latest",
+    "babel-loader": "latest",
+    "babel-plugin-react-intl": "latest",
+    "babel-plugin-transform-object-rest-spread": "latest",
+    "babel-preset-env": "latest",
+    "babel-preset-react": "latest",
+    "cross-env": "^7.0.3",
+    "css-loader": "latest",
+    "electron": "^31.2.1",
+    "electron-packager": "^17.1.2",
+    "eslint": "latest",
+    "eslint-config-import": "latest",
+    "eslint-config-scratch": "latest",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-react": "latest",
+    "gh-pages": "latest",
+    "html-webpack-plugin": "latest",
+    "json": "latest",
+    "lodash.defaultsdeep": "latest",
+    "mkdirp": "latest",
+    "postcss-import": "latest",
+    "postcss-loader": "latest",
+    "postcss-simple-vars": "latest",
+    "raf": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-intl": "latest",
+    "react-intl-redux": "latest",
+    "react-popover": "latest",
+    "react-redux": "latest",
+    "react-responsive": "latest",
+    "react-style-proptype": "latest",
+    "react-test-renderer": "latest",
+    "react-tooltip": "latest",
+    "redux": "latest",
+    "redux-mock-store": "latest",
+    "redux-throttle": "latest",
+    "regenerator-runtime": "latest",
+    "rimraf": "latest",
+    "scratch-l10n": "latest",
+    "scratch-render-fonts": "latest",
+    "style-loader": "latest",
+    "svg-url-loader": "latest",
+    "tap": "latest",
+    "uglifyjs-webpack-plugin": "latest",
+    "url-loader": "latest",
+    "webpack": "latest",
+    "webpack-cli": "latest",
+    "webpack-dev-server": "latest"
   },
   "browserslist": [
     "last 3 versions",
